BUG-DFC-13369-Checkbox spacing is excessive
Fixed build failure issue

--- a/src/gds_service_toolkit/assets/src/frontend/sass/patterns/psf.scss
+++ b/src/gds_service_toolkit/assets/src/frontend/sass/patterns/psf.scss
@@ -363,11 +363,12 @@
     }
   }
 
-@media (max-width: 640px) {
-  .govuk-checkboxes {
-    .govuk-radios--inline {
-      float:none;
-      margin-top:15px;
+  @media (max-width: 640px) {
+    .govuk-checkboxes {
+      .govuk-radios--inline {
+        float:none;
+        margin-top:15px;
+      }
     }
   }
 }
